// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gGtqur FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 iOCFJY TextArea__StyledInput-sc-ixw2m3-0 eHLMtF"
          disabled=""
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 lmnuvp FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 jUpZct TextArea__StyledInput-sc-ixw2m3-0 eHLMtF"
          placeholder="Please write a story"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <span
        class="StyledText-sc-1sadyjn-0 dkbpSN"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 lmnuvp FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 jUpZct TextArea__StyledInput-sc-ixw2m3-0 eHLMtF"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <label
        class="StyledText-sc-1sadyjn-0 julVzF"
        for="some-text"
      >
        A helpful area of text
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 lmnuvp FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 jUpZct TextArea__StyledInput-sc-ixw2m3-0 eHLMtF"
          id="some-text"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hDnXgl FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 jUpZct TextArea__StyledInput-sc-ixw2m3-0 eHLMtF"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 YswyP"
      >
        There is something very wrong!
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dWhfdE FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 lmnuvp FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 jUpZct TextArea__StyledInput-sc-ixw2m3-0 eHLMtF"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 hleChS"
      >
        Some useful information
      </span>
    </div>
  </div>
</div>
`;
